--- a/SortSearchAndPagedSample/SortSearchAndPagedSample/Views/Home/Index.cshtml
+++ b/SortSearchAndPagedSample/SortSearchAndPagedSample/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<SortSearchAndPagedSample.Models.AccountBook>
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -9,23 +10,36 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-md-12">
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Categoryyy)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Amounttt)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Dateee)
+                </th>
+            </tr>
+
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Categoryyy)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Amounttt)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Dateee)
+                    </td>
+                </tr>
+            }
+
+        </table>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    
 </div>
