--- a/SortSearchAndPagedSample/SortSearchAndPagedSample/Views/Home/Index.cshtml
+++ b/SortSearchAndPagedSample/SortSearchAndPagedSample/Views/Home/Index.cshtml
@@ -1,17 +1,14 @@
-﻿@model IEnumerable<SortSearchAndPagedSample.Models.AccountBook>
+﻿@using PagedList
+@using PagedList.Mvc
+@model IEnumerable<SortSearchAndPagedSample.Models.AccountBook>
 @{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
 
 <div class="row">
     <div class="col-md-12">
-        <table class="table">
+        <table class="table table-bordered table-hover">
             <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.Categoryyy)
@@ -23,7 +20,6 @@
                     @Html.DisplayNameFor(model => model.Dateee)
                 </th>
             </tr>
-
             @foreach (var item in Model)
             {
                 <tr>
@@ -40,6 +36,12 @@
             }
 
         </table>
+        <nav>
+            @Html.PagedListPager((IPagedList)Model, d => Url.Action("index", new
+   {
+       page = d
+   }))
+        </nav>
     </div>
     
 </div>
