--- a/SortSearchAndPagedSample/SortSearchAndPagedSample/Views/Shared/_Layout.cshtml
+++ b/SortSearchAndPagedSample/SortSearchAndPagedSample/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewBag.Title - 我的 ASP.NET 應用程式</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
